package ma.iatacademy.api.domain.enums;

public enum SubmissionStatus {
    SUBMITTED,
    LATE,
    GRADED
}
