@startuml diagramme_classes_evaluation
!theme plain

skinparam dpi 300
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty members

skinparam nodesep 20
skinparam ranksep 48

skinparam class {
    BackgroundColor White
    BorderColor #142B4B
    BorderThickness 1.2
    ArrowColor #142B4B
    ArrowThickness 1.3
    FontColor #142B4B
    FontStyle Bold
    AttributeFontColor #23282F
    AttributeFontStyle Normal
    AttributeFontSize 12
}

skinparam title {
    FontColor #142B4B
    FontSize 20
    FontStyle Bold
}

title Diagramme de classes — Évaluation (quiz, devoirs, notation)

abstract class AuditableEntity {
  - id : UUID
  # createdAt : Instant
  # updatedAt : Instant
}

class User {
  - email : String
  - fullName : String
  - role : Role
}

class ModuleEntity {
  - code : String
  - title : String
}

class Lesson {
  - title : String
}

class Formation {
  - title : String
}

class Quiz {
  - title : String
  - quizType : QuizType
  - questionMode : QuizQuestionMode
  - passingScore : int
  - maxAttempts : int
  - timeLimitSeconds : int
  - retryDelayMinutes : int
  - blocking : boolean
}

class Question {
  - prompt : String
  - questionType : QuestionType
  - orderIndex : int
}

class AnswerOption {
  - label : String
  - correct : boolean
}

class QuizAttempt {
  - startedAt : Instant
  - submittedAt : Instant
  - score : BigDecimal
  - status : AttemptStatus
}

class EssayGrade {
  - score : BigDecimal
  - feedback : String
  - gradedAt : Instant
}

class ProctoringEvent {
  - eventType : ProctoringEventType
  - occurredAt : Instant
}

class Assignment {
  - title : String
  - dueAt : Instant
  - maxScore : BigDecimal
}

class Submission {
  - status : SubmissionStatus
  - grade : BigDecimal
}

class GradeAdjustment {
  - points : BigDecimal
  - reason : String
}

enum QuizType {
  APPLICATIF
  FIN_MODULE
  FIN_UF
  FIN_ANNEE
}

enum QuestionType {
  SINGLE_CHOICE
  MULTI_CHOICE
  TRUE_FALSE
  ESSAY
}

enum AttemptStatus {
  IN_PROGRESS
  SUBMITTED
  EXPIRED
  PASSED
  FAILED
  PENDING_REVIEW
}

enum ProctoringEventType {
  FOCUS_LOST
  TAB_HIDDEN
  COPY_ATTEMPT
  PASTE_ATTEMPT
  FULLSCREEN_EXIT
}

enum SubmissionStatus {
  SUBMITTED
  LATE
  GRADED
}

AuditableEntity <|-- Quiz
AuditableEntity <|-- Question
AuditableEntity <|-- AnswerOption
AuditableEntity <|-- QuizAttempt
AuditableEntity <|-- EssayGrade
AuditableEntity <|-- ProctoringEvent
AuditableEntity <|-- Assignment
AuditableEntity <|-- Submission
AuditableEntity <|-- GradeAdjustment

Quiz ..> QuizType
Question ..> QuestionType
QuizAttempt ..> AttemptStatus
ProctoringEvent ..> ProctoringEventType
Submission ..> SubmissionStatus

Lesson "0..1" -- "0..N" Quiz : section >
ModuleEntity "0..1" -- "0..N" Quiz : fin de module >
Formation "0..1" -- "0..N" Quiz : fin d'UF / d'année >
Quiz "1" *-- "0..N" Question
Question "1" *-- "0..N" AnswerOption

User -- "0..N" QuizAttempt
Quiz -- "0..N" QuizAttempt
QuizAttempt -- "0..N" EssayGrade
QuizAttempt -- "0..N" ProctoringEvent
Question -- "0..N" EssayGrade

ModuleEntity -- "0..N" Assignment
Assignment -- "0..N" Submission
User -- "0..N" Submission
User -- "0..N" GradeAdjustment
ModuleEntity -- "0..N" GradeAdjustment

@enduml
